--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         "action": {
           "type": "launch_miniapp",
           "name": "PNL Tracker",
-          "url": "https://your-domain.com",
+          "url": "https://pnl-tracker-three.vercel.app",
           "splashImageUrl": "https://pnl-tracker-three.vercel.app/pnl-logo.png",
           "splashBackgroundColor": "#fafafa"
         }
