--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <!-- Farcaster MiniApp Meta Tags -->
     <meta name="fc:miniapp" content='{
       "version": "1",
-      "imageUrl": "https://pnl-tracker-three.vercel.app/pnl-logo.png",
+      "imageUrl": "https://pnl-tracker-three.vercel.app/trident.png",
       "button": {
         "title": "🪪 Track PNL",
         "action": {
           "type": "launch_miniapp",
           "name": "PNL Tracker",
           "url": "https://pnl-tracker-three.vercel.app",
-          "splashImageUrl": "https://pnl-tracker-three.vercel.app/pnl-logo.png",
+          "splashImageUrl": "https://pnl-tracker-three.vercel.app/trident.png",
           "splashBackgroundColor": "#fafafa"
         }
       }
