--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <!-- For backward compatibility -->
     <meta name="fc:frame" content='{
       "version": "1",
-      "imageUrl": "https://your-domain.com/og-image.png",
+      "imageUrl": "https://pnl-tracker-three.vercel.app/trident.png",
       "button": {
-        "title": "📊 Track PNL",
+        "title": "🪪 Track PNL",
         "action": {
           "type": "launch_frame",
           "name": "PNL Tracker",
-          "url": "https://your-domain.com",
-          "splashImageUrl": "https://your-domain.com/splash.png",
+          "url": "https://pnl-tracker-three.vercel.app",
+          "splashImageUrl": "https://pnl-tracker-three.vercel.app/trident.png",
           "splashBackgroundColor": "#fafafa"
         }
       }
